# custom_string

./: 01Zveriok.h  README.md  Review1_Buchok_Zveriok.docx  Review2BuchokZveriok.docx
AnyString/: AnyString.vcxproj  String.cpp  String.h  String.sln  foo.cpp  foo.h  m_string.h  main.cpp  proxy.h
Buchok01/: Buchok01.vcxproj  String.h
Lazy-String-master/Lazy-String-master/: lazy_string.hpp
String1/: CMakeLists.txt  buil.bat
String1/src/: CMakeLists.txt  Main.cpp  MyString.cpp  MyString.h
String1/test/: CMakeLists.txt  MyStringTest.cpp
String3/C++CourseProject/: C++CourseProject.sln
String3/C++CourseProject/C++CourseProject/: C++CourseProject.vcxproj  C++CourseProject.vcxproj.filters  InsertionsAndDeletions.cpp  InsertionsAndDeletions.h  IteratorTests.cpp  IteratorTests.h  Main.cpp  MiscellaneousTests.cpp  MiscellaneousTests.h  NewTestCategoryTemplateHeader.txt  OperatorOverloadTests.cpp  OperatorOverloadTests.h  String.cpp  String.h  StringConstructorAndInitTests.cpp  StringConstructorAndInitTests.h  Test.cpp  Test.h  TestDriver.cpp  TestDriver.h
StringImplementation/Lazy-String-master/Lazy-String-master/: lazy_string.hpp
StringImplementation/String_Implementation/: String_Implementation.sln
StringImplementation/String_Implementation/String_Implementation/: String.cpp  String.h  String_Implementation.vcxproj  String_Implementation.vcxproj.filters  main.cpp
StringImplementation/fstring-master/fstring-master/: .gitignore  CMakeLists.txt  FAllocator.h  FString  FString.h  FString.tcc  FString_test.cpp  FStringfwd.h  LICENSE  README.md
StringImplementation/shared_string-master/shared_string-master/: cow_string.h  make_string.h  shared_string.h  shared_string.natvis
StringTsehlnyk/: String.h  StringTsehelnyk.vcxproj  main.cpp  test.h
StringZveriok/: String.cpp  String.h
String_Implementation/String_Implementation/: String_Implementation.vcxproj  main.cpp
groupOfStringsFromNet/: Buchok00.sln
groupOfStringsFromNet/Buchok00/: Buchok00.vcxproj  Buchok00.vcxproj.filters  CoolString.cpp  CoolString.h  MainTest.cpp  OwnString.h  StringGeeks.cpp  StringGeeks.h
testingZveriok/: testingZveriok.sln
testingZveriok/testingZveriok/: String.cpp  String.h  testingZveriok.vcxproj
(+7 files in other folders)
